<resources>
    <string name="app_name">Ejercicios Tema 1</string>
    <string name="ejercicio_1_conversor_monedas">Ejercicio 1: Conversor Monedas</string>
    <string name="ejercicio_3_mostrar_una_web">Ejercicio 3: Mostrar una web</string>
    <string name="ejercicio_2_cm_inch">Ejercicio 2: cm - inch</string>
    <string name="ejercicio_4_contador_caf_s">Ejercicio 4: Contador Cafés</string>
    <string name="ejercicio_5_libre_nombre">Ejercicio 5: Juego 7 y medio</string>
    <string name="dolares">Dólares</string>
    <string name="numDolar">$</string>
    <string name="numEuro">€</string>
    <string name="dolar_a_euro">Dólar a Euro</string>
    <string name="euro_a_dolar">Euro a Dólar</string>
    <string name="convertir">Convertir</string>
    <string name="cambio">1.00</string>
    <string name="Convierte">Pasar Medida</string>
    <string name="inch_cms"><![CDATA[Inch -> Cms]]></string>
    <string name="cms_inch"><![CDATA[Cms -> Inch]]></string>
    <string name="url_o_web">url o web</string>
    <string name="acceder_a_la_p_gina">Acceder a la página</string>
    <string name="ingrese_la_web_a_la_que_desea_acceder">Ingrese la WEB a la que desea acceder</string>
    <string name="txvNumCafe">0</string>
    <string name="txvTiempoRestante">00:00</string>
    <string name="btn1mas">+ 1 minuto</string>
    <string name="btn1menos">- 1 minuto</string>
    <string name="btnStart">Empezar a encafeinarse</string>
    <string name="txvMinutos">00</string>
    <string name="txvSegundos">00</string>
    <string name="swhpatras">Hacia atrás</string>
    <string name="txvTitulo">Juega al 7 y medio contra MÍ</string>
    <string name="btnPlantar">Plantarse</string>
    <string name="btnStartJuego">Start</string>
    <string name="txvPunCom">0</string>
    <string name="btnOtra">Otra</string>
    <string name="btnResetCofee">Reset Cafeses</string>
</resources>
