<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_conta_coffee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jasrsir.ejerciciostema1.MainContaCoffee">

    <TextView
        android:text="Controla tu tiempo de descanso y controla cuánta cafeína llevas encima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/txvcofee"
        android:layout_alignParentRight="true"
        android:textSize="18sp" />

    <Button
        android:text="@string/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/btnStart"
        android:layout_alignParentRight="true"
        android:textSize="14sp"
        android:clickable="true"
        android:layout_alignParentLeft="true"
        android:onClick="getOnClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="20sp"
        android:text="Has engullido              Cafeses hoy"
        android:layout_below="@+id/txvcofee"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="47dp" />

    <TextView
        android:text="TIEMPO RESTANTE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvTiempoRest"
        android:textSize="24sp"
        android:layout_below="@+id/txvNumCafe"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="58dp" />

    <Button
        android:text="@string/btn1mas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn1mas"
        android:textSize="18sp"
        android:clickable="true"
        android:onClick="getOnClick"
        android:layout_above="@+id/btn1menos"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="24dp" />

    <Button
        android:text="@string/btnResetCofee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnResetCofee"
        android:onClick="getOnClick"
        android:layout_above="@+id/btnStart"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="29dp" />

    <Button
        android:text="@string/btn1menos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn1menos"
        android:textSize="18sp"
        android:clickable="true"
        android:onClick="getOnClick"
        android:layout_above="@+id/btnStart"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="14dp" />

    <TextView
        android:text="@string/txvTiempoRestante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvTiempoRestante"
        android:textSize="70sp"
        tools:text="00 : 00"
        android:layout_above="@+id/btn1mas"
        android:layout_alignParentLeft="true" />

    <TextView
        android:text="@string/txvNumCafe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvNumCafe"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/btnResetCofee"
        android:layout_marginLeft="15dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swhPatras"
        tools:text="Hacia atrás"
        android:checked="true"
        android:text="@string/swhpatras"
        android:clickable="true"
        android:layout_below="@+id/txvNumCafe"
        android:layout_alignRight="@+id/textView3"
        android:layout_marginTop="16dp" />

</RelativeLayout>
