<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jasrsir.ejerciciostema1.MainActivity">

    <Button
        android:text="@string/ejercicio_1_conversor_monedas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:id="@+id/btnEjer1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="getOnClick"/>

    <Button
        android:text="@string/ejercicio_3_mostrar_una_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEjer3"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/btnEjer2"
        android:layout_alignEnd="@+id/btnEjer2"
        android:layout_alignLeft="@+id/btnEjer2"
        android:layout_alignStart="@+id/btnEjer2"
        android:onClick="getOnClick"/>

    <Button
        android:text="@string/ejercicio_2_cm_inch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:id="@+id/btnEjer2"
        android:layout_below="@+id/btnEjer1"
        android:layout_alignRight="@+id/btnEjer1"
        android:layout_alignEnd="@+id/btnEjer1"
        android:layout_alignLeft="@+id/btnEjer1"
        android:layout_alignStart="@+id/btnEjer1"
        android:onClick="getOnClick"/>

    <Button
        android:text="@string/ejercicio_4_contador_caf_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEjer3"
        android:layout_marginTop="44dp"
        android:id="@+id/btnEjer4"
        android:layout_alignRight="@+id/btnEjer3"
        android:layout_alignEnd="@+id/btnEjer3"
        android:layout_alignLeft="@+id/btnEjer3"
        android:layout_alignStart="@+id/btnEjer3"
        android:onClick="getOnClick"/>

    <Button
        android:text="@string/ejercicio_5_libre_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:id="@+id/btnEjer5"
        android:layout_alignRight="@+id/btnEjer4"
        android:layout_alignEnd="@+id/btnEjer4"
        android:layout_alignLeft="@+id/btnEjer4"
        android:layout_alignStart="@+id/btnEjer4"
        android:onClick="getOnClick"/>
</RelativeLayout>
