<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_conversor_medida"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jasrsir.ejerciciostema1.MainConversorMedida">

    <TextView
        android:text="Convierte medidas de CM a Inch y viceversa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:textSize="18sp"
        android:id="@+id/txvTitulo" />

    <TextView
        android:text="Centimetros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvCms"
        android:layout_below="@+id/txvTitulo"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:text="Pulgadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:id="@+id/txvInch"
        android:layout_below="@+id/txvCms"
        android:layout_alignParentLeft="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtInch"
        android:layout_marginTop="35dp"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/edtInch">

        <RadioButton
            android:text="@string/cms_inch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdbCms"
            android:layout_weight="1"
            android:enabled="true"
            android:checked="true" />

        <RadioButton
            android:text="@string/inch_cms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdbInch"
            android:layout_weight="1" />
    </RadioGroup>

    <Button
        android:text="@string/Convierte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMedida"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="103dp"
        android:onClick="getOnClick"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edtCms"
        android:text="0.00"
        android:layout_alignBaseline="@+id/txvCms"
        android:layout_alignBottom="@+id/txvCms"
        android:layout_alignLeft="@+id/btnMedida" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edtInch"
        android:text="0.00"
        android:layout_alignBaseline="@+id/txvInch"
        android:layout_alignBottom="@+id/txvInch"
        android:layout_alignLeft="@+id/edtCms" />

</RelativeLayout>
